# robotics

./: model.config
box/: model.config  model.sdf
gps/: CMakeLists.txt  package.xml
gps/src/: gps_plugin.cpp
map/: mapFinal.yaml
mapping/: CMakeLists.txt  all_tf_broadcast.launch  package.xml
mapping/src/: keycontrol.cpp  laser_tf_broadcaster.cpp  willy3_tf_broadcaster.cpp
palletjack/: model.sdf
plugin/: CMakeLists.txt  ControlFork.cc  ControlFork.hh  ControlPlugin.cc  ControlPlugin.hh  ElevateFork.cc  PIDJoint.cc  PIDJoint.hh  TempFork.cc
polygons/: CMakeLists.txt  package.xml
polygons/action/: Draw.action
polygons/msg/: Draw.msg
polygons/src/: draw_client.cpp  draw_server.cpp
turtlebot_controller/: CMakeLists.txt  control.launch  package.xml
turtlebot_controller/src/: control.cpp  goal_publisher.cpp  goal_tracker.cpp  joy_cmd.cpp  joypad_simulator.cpp  mux.cpp  pose.cpp
turtlebot_controller/srv/: GetGoal.srv
turtlebot_controller/turtlebot_controller/src/: joy_cmd.cpp  joypad_simulator.cpp
